--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,6 @@
     "strict": true,
     "esModuleInterop": true
   },
-  "include": ["server/**/*"]
+  "include": ["server/**/*"],
+  "exclude": ["dist", "node_modules"]
 }
