--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,6 @@
     "strict": true,
     "esModuleInterop": true
   },
-  "include": ["server/**/*"],
+  "include": ["src"],
   "exclude": ["dist", "node_modules"]
 }
