--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
     "vite": "^7.1.2",
-    "rollup": "4.24.0"
+    "rollup": "4.24.0",
+    "lightningcss": "1.25.1",
+
   }
 }
