--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "typescript-eslint": "^8.39.1",
     "vite": "^7.1.2",
     "rollup": "4.24.0",
-    "lightningcss": "1.25.1",
+    "lightningcss": "1.25.1"
 
   }
 }
