--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-parallax-tilt": "^1.7.304",
     "react-router-dom": "^7.8.1",
     "react-vertical-timeline-component": "^3.5.3",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@tailwindcss/oxide": "4.0.6",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react": "^5.0.0",
@@ -36,14 +38,12 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "lightningcss": "1.25.1",
     "postcss": "^8.5.6",
+    "rollup": "4.24.0",
     "tailwindcss": "^4.1.12",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
-    "vite": "^7.1.2",
-    "rollup": "4.24.0",
-    "lightningcss": "1.25.1",
-    "@tailwindcss/oxide": "4.0.6"
-
+    "vite": "^7.1.2"
   }
 }
